# wave_function_collapse

./: Cargo.toml  README.md
res/: circuit.json
src/: collapse.rs  display.rs  main.rs  parser.rs
