[package]
name = "wave_function_collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
derive-new = "0.5.9"
getset = "0.1.2"
itertools = "0.10.5"
rand = { version = "0.8.5", features = ["small_rng"] }
sdl2 = { version = "0.35.2", features = ["image"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
